# inspection-robot

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build_and_coveralls.yml  my_codecov_upload.yml
launch/: inspection.launch.py
results/: cppcheck_output.txt  cpplint_output.txt  index.html
results/doxygen/src_files/: annotated.html  class_detection-members.html  class_detection.html  class_detection__coll__graph.map  class_detection__inherit__graph.md5  class_moving_robot-members.html  class_moving_robot.html  class_moving_robot__inherit__graph.map  class_moving_robot__inherit__graph.md5  class_report-members.html  class_report.html  class_report__inherit__graph.map  class_report__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  image__converter_8cpp.html  image__converter_8cpp__incl.map  image__converter_8cpp__incl.md5  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  moving__robot_8cpp.html  moving__robot_8cpp__incl.map  moving__robot_8cpp__incl.md5  report_8cpp.html  report_8cpp__incl.map  report_8cpp__incl.md5
results/doxygen/src_files/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  searchdata.js
results/doxygen/test/: annotated.html  class_task_planning_fixture-members.html  class_task_planning_fixture.html  class_task_planning_fixture__inherit__graph.map  classes.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  test_8cpp.html  test_8cpp__incl.map  test_8cpp__incl.md5
results/doxygen/test/search/: all_0.js  classes_0.js  files_0.js
src/: image_converter.cpp  moving_robot.cpp  report.cpp
test/: main.cpp  test.cpp
worlds/: inspection.world
